--- a/MachineLearningToolv3/MachineLearningToolv3.csproj
+++ b/MachineLearningToolv3/MachineLearningToolv3.csproj
@@ -74,7 +74,8 @@
     <TargetZone>LocalIntranet</TargetZone>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>favicon.ico</ApplicationIcon>
+    <ApplicationIcon>
+    </ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="AForge, Version=2.2.5.0, Culture=neutral, PublicKeyToken=c1db6ff4eaa06aeb, processorArchitecture=MSIL">
@@ -89,8 +90,8 @@
     <Reference Include="Bunifu_UI_v1.52">
       <HintPath>D:\WORK\ML_GUI\ML\machinelearningtool\MachineLearningTool\bin\Debug\Bunifu_UI_v1.52.dll</HintPath>
     </Reference>
-    <Reference Include="FilterControls">
-      <HintPath>D:\WORK\EnablAR\Licensing\TrialMaker\TrialMaker\bin\Debug\FilterControls.dll</HintPath>
+    <Reference Include="Ionic.Zip, Version=1.9.1.8, Culture=neutral, PublicKeyToken=edbe51ad942a3f5c, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ionic.Zip.1.9.1.8\lib\Ionic.Zip.dll</HintPath>
     </Reference>
     <Reference Include="LumenWorks.Framework.IO, Version=3.8.0.0, Culture=neutral, PublicKeyToken=5ad3ea2f85776344, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -99,11 +100,8 @@
     <Reference Include="LumenWorks.Framework.Tests.Unit">
       <HintPath>..\..\..\..\Desktop\Release\LumenWorks.Framework.Tests.Unit.dll</HintPath>
     </Reference>
-    <Reference Include="SerialBoxes">
-      <HintPath>D:\WORK\EnablAR\Licensing\TrialMaker\TrialMaker\bin\Debug\SerialBoxes.dll</HintPath>
-    </Reference>
-    <Reference Include="SoftwareLocker">
-      <HintPath>D:\WORK\EnablAR\Licensing\TrialMaker\TrialMaker\bin\Debug\SoftwareLocker.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration.Install" />
@@ -112,6 +110,9 @@
     <Reference Include="System.IO.Compression" />
     <Reference Include="System.IO.Compression.FileSystem" />
     <Reference Include="System.Management" />
+    <Reference Include="System.Net" />
+    <Reference Include="System.Net.Http.WebRequest" />
+    <Reference Include="System.Windows" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -130,7 +131,6 @@
     <Compile Include="cnntest.Designer.cs">
       <DependentUpon>cnntest.cs</DependentUpon>
     </Compile>
-    <Compile Include="DropShaddow.cs" />
     <Compile Include="FileReadWrite.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -149,6 +149,12 @@
     </Compile>
     <Compile Include="loading_libraries.Designer.cs">
       <DependentUpon>loading_libraries.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Loginform.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Loginform.Designer.cs">
+      <DependentUpon>Loginform.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="progress.cs">
@@ -170,6 +176,7 @@
     <Compile Include="Test.Designer.cs">
       <DependentUpon>Test.cs</DependentUpon>
     </Compile>
+    <Compile Include="MyWebRequest.cs" />
     <Compile Include="web_cam_select.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -184,6 +191,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="loading_libraries.resx">
       <DependentUpon>loading_libraries.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Loginform.resx">
+      <DependentUpon>Loginform.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="progress.resx">
       <DependentUpon>progress.cs</DependentUpon>
@@ -240,9 +250,6 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="favicon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
