--- a/MachineLearningToolv3/packages.config
+++ b/MachineLearningToolv3/packages.config
@@ -3,4 +3,6 @@
   <package id="AForge" version="2.2.5" targetFramework="net472" />
   <package id="AForge.Video" version="2.2.5" targetFramework="net472" />
   <package id="AForge.Video.DirectShow" version="2.2.5" targetFramework="net472" />
+  <package id="Ionic.Zip" version="1.9.1.8" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net45" />
 </packages>
